Fixed p default styling for grid gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,10 @@
   box-sizing: border-box;
 }
 
+p {
+  margin: 0;
+}
+
 code {
   font-family: "Montserrat", source-code-pro, Menlo, Monaco, Consolas,
     "Courier New", monospace;
@@ -49,9 +53,8 @@ h3 {
 /* Container for grid text */
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr, 1fr;
-  grid-column-gap: 20px;
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+  grid-gap: 20px;
   margin: 10px 100px 10px; 
   justify-content: center;
   justify-items: center;
@@ -62,7 +65,7 @@ h3 {
   display: flex;
   color: var(--text);
   padding: 20px;
-  border: 1px var(--sections) solid;
+  background-color: var(--dark);
 }
 
 /* Grid Items */
